--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   "rules": {
     "no-tabs": 0,
     "camelcase": 0,
+    "arrow-parens": 0,
     'arrow-body-style': 0,
     "no-case-declarations": 0,
     "import/prefer-default-export": 0,
