--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"react-dom": "^16.2.0",
 		"react-scripts": "1.1.0",
 		"semantic-ui-css": "^2.2.12",
-		"semantic-ui-react": "^0.77.2"
+		"semantic-ui-react": "^0.77.2",
+		"soundcloud-audio": "^1.2.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
