--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"axios": "^0.17.1",
 		"faker": "^4.1.0",
 		"lodash": "^4.17.4",
+		"mapbox-gl": "^0.44.0",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
+		"react-mapbox-gl": "^3.4.1",
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.0",
 		"semantic-ui-css": "^2.2.12",
