--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"start:heroku": "REACT_APP_BASE_URL=http://the-bc-api.herokuapp.com react-scripts start",
+		"build": "REACT_APP_BASE_URL=http://the-bc-api.herokuapp.com react-scripts build",
 		"deploy": "npm run build && aws s3 sync build s3://burncartel.com",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject"
