--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"axios": "^0.17.1",
 		"lodash": "^4.17.4",
 		"mapbox-gl": "^0.44.0",
+		"prop-types": "^15.6.0",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-mapbox-gl": "^3.4.1",
