--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "react/no-array-index-key": 0,
     "one-var-declaration-per-line": 0,
     'jsx-a11y/no-noninteractive-element-interactions': 0,
+    'jsx-a11y/click-events-have-key-events': 0,
     'jsx-a11y/no-static-element-interactions': 0,
     'jsx-a11y/alt-text': 0,
     "no-else-return": 0,
