--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     'jsx-a11y/no-noninteractive-element-interactions': 0,
     'jsx-a11y/click-events-have-key-events': 0,
     'jsx-a11y/no-static-element-interactions': 0,
+    'jsx-a11y/anchor-is-valid': 0,
     'jsx-a11y/alt-text': 0,
     "no-else-return": 0,
     "comma-dangle": ["error", "never"],
