--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-mapbox-gl": "^3.4.1",
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.0",
+		"react-slick": "^0.23.1",
 		"semantic-ui-css": "^2.2.12",
 		"semantic-ui-react": "^0.77.2",
 		"soundcloud-audio": "^1.2.2"
