--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 	"dependencies": {
 		"async": "^2.6.0",
 		"axios": "^0.17.1",
+		"chart.js": "^2.7.2",
 		"create-index": "^2.3.0",
 		"global": "^4.3.2",
 		"lodash": "^4.17.4",
 		"mapbox-gl": "^0.44.0",
 		"prop-types": "^15.6.0",
 		"react": "^16.2.0",
+		"react-chartkick": "^0.2.1",
 		"react-dom": "^16.2.0",
 		"react-mapbox-gl": "^3.4.1",
 		"react-router-dom": "^4.2.2",
