--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-chartkick": "^0.2.1",
 		"react-dom": "^16.2.0",
 		"react-mapbox-gl": "^3.4.1",
+		"react-responsive": "^4.1.0",
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.0",
 		"react-slick": "^0.23.1",
