--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "react/jsx-indent": [1, 'tab'],
     "react/prefer-stateless-function": 0,
     "import/no-extraneous-dependencies": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "react/prop-types": [0]
   }
 }
