--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-	"name": "bc-web-client",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"async": "^2.6.0",
-		"axios": "^0.17.1",
-		"chart.js": "^2.7.2",
-		"create-index": "^2.3.0",
-		"global": "^4.3.2",
-		"lodash": "^4.17.4",
-		"mapbox-gl": "^0.44.0",
-		"prop-types": "^15.6.0",
-		"react": "^16.2.0",
-		"react-chartkick": "^0.2.1",
-		"react-dom": "^16.2.0",
-		"react-mapbox-gl": "^3.4.1",
-		"react-responsive": "^4.1.0",
-		"react-router-dom": "^4.2.2",
-		"react-scripts": "1.1.0",
-		"react-slick": "^0.23.1",
-		"semantic-ui-css": "^2.2.12",
-		"semantic-ui-react": "^0.77.2",
-		"soundcloud-audio": "^1.2.2"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"start:heroku": "REACT_APP_BASE_URL=http://the-bc-api.herokuapp.com react-scripts start",
-		"build": "REACT_APP_BASE_URL=http://the-bc-api.herokuapp.com react-scripts build",
-		"deploy": "npm run build && aws s3 sync build s3://burncartel.com",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
-	},
-	"devDependencies": {
-		"eslint-config-airbnb": "^16.1.0"
-	}
+  "name": "bc-web-client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "async": "^2.6.0",
+    "axios": "^0.17.1",
+    "chart.js": "^2.7.2",
+    "create-index": "^2.3.0",
+    "global": "^4.3.2",
+    "lodash": "^4.17.4",
+    "mapbox-gl": "^0.44.0",
+    "prop-types": "^15.6.0",
+    "query-string": "^6.2.0",
+    "react": "^16.2.0",
+    "react-chartkick": "^0.2.1",
+    "react-dom": "^16.2.0",
+    "react-mapbox-gl": "^3.4.1",
+    "react-responsive": "^4.1.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "2.0.3",
+    "react-slick": "^0.23.1",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.77.2",
+    "soundcloud-audio": "^1.2.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "start:heroku": "REACT_APP_BASE_URL=http://the-bc-api.herokuapp.com react-scripts start",
+    "build": "REACT_APP_BASE_URL=http://the-bc-api.herokuapp.com react-scripts build",
+    "deploy": "npm run build && aws s3 sync build s3://burncartel.com",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
