--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "global": "^4.3.2",
     "lodash": "^4.17.4",
     "mapbox-gl": "^0.44.0",
+    "node-sass": "^4.9.4",
     "prop-types": "^15.6.0",
     "query-string": "^6.2.0",
     "react": "^16.2.0",
