--- a/.eslintrc
+++ b/.eslintrc
@@ -25,14 +25,17 @@
     "react/no-array-index-key": 0,
     "one-var-declaration-per-line": 0,
     'jsx-a11y/no-noninteractive-element-interactions': 0,
+    'jsx-a11y/heading-has-content': 0,
     'jsx-a11y/click-events-have-key-events': 0,
     'jsx-a11y/no-static-element-interactions': 0,
     'jsx-a11y/anchor-is-valid': 0,
     'jsx-a11y/alt-text': 0,
     "no-else-return": 0,
+    "one-var": 0,
     "comma-dangle": ["error", "never"],
-    "indent": ["error", "tab", { "SwitchCase": 1 }],
-    "react/jsx-indent": [1, 'tab'],
+    "indent": 0,
+    # "indent": ["error", "tab", { "SwitchCase": 1 }],
+    "react/jsx-indent": [0, 'tab'],
     "react/prefer-stateless-function": 0,
     "import/no-extraneous-dependencies": 0,
     "no-underscore-dangle": 0,
