--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "camelcase": 0,
     "arrow-parens": 0,
     'arrow-body-style': 0,
+    'no-plusplus': 0,
     "no-case-declarations": 0,
     "import/prefer-default-export": 0,
     "react/jsx-indent-props": 0,
