--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "async": "^2.6.0",
     "axios": "^0.17.1",
     "chart.js": "^2.7.2",
+    "cloudinary-react": "^1.0.6",
     "create-index": "^2.3.0",
     "global": "^4.3.2",
     "lodash": "^4.17.4",
