--- a/package.json
+++ b/package.json
@@ -3,26 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "async": "^2.6.0",
     "axios": "^0.17.1",
-    "chart.js": "^2.7.2",
     "cloudinary-react": "^1.0.6",
     "create-index": "^2.3.0",
     "global": "^4.3.2",
-    "lodash": "^4.17.4",
-    "mapbox-gl": "^0.44.0",
     "node-sass": "^4.9.4",
     "query-string": "^6.2.0",
     "react": "^16.2.0",
-    "react-chartkick": "^0.2.1",
     "react-dom": "^16.2.0",
-    "react-mapbox-gl": "^3.4.1",
+    "react-lazyload": "^2.3.0",
     "react-responsive": "^4.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.3",
-    "react-slick": "^0.23.1",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.2",
     "soundcloud-audio": "^1.2.2",
     "webfontloader": "^1.6.28"
   },
