added basic notification system

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-responsive": "^4.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.3",
+    "react-toastify": "^4.4.3",
     "soundcloud-audio": "^1.2.2",
     "webfontloader": "^1.6.28"
   },
