--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "cloudinary-react": "^1.0.6",
+    "copy-to-clipboard": "^3.0.8",
     "create-index": "^2.3.0",
     "global": "^4.3.2",
     "node-sass": "^4.9.4",
