--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     'jsx-a11y/no-static-element-interactions': 0,
     'jsx-a11y/anchor-is-valid': 0,
     'jsx-a11y/alt-text': 0,
+    'jsx-a11y/label-has-for': 0,
     "no-else-return": 0,
     "one-var": 0,
     "comma-dangle": ["error", "never"],
