--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-lazyload": "^2.3.0",
+    "react-progressive-image": "^0.6.0",
     "react-responsive": "^4.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.3",
