--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
     'jsx-a11y/alt-text': 0,
     'jsx-a11y/label-has-for': 0,
     "no-else-return": 0,
+    "class-methods-use-this": 0,
     "one-var": 0,
     "comma-dangle": ["error", "never"],
     "indent": 0,
