--- a/.eslintrc
+++ b/.eslintrc
@@ -32,8 +32,10 @@
     'jsx-a11y/anchor-is-valid': 0,
     'jsx-a11y/alt-text': 0,
     'jsx-a11y/label-has-for': 0,
+    'prefer-destructuring': 0,
     "no-else-return": 0,
     "class-methods-use-this": 0,
+    "react/sort-comp": 0,
     "one-var": 0,
     "comma-dangle": ["error", "never"],
     "indent": 0,
