--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
     'jsx-a11y/label-has-for': 0,
     'prefer-destructuring': 0,
     "no-else-return": 0,
+    "no-eval": 0,
     "class-methods-use-this": 0,
     "react/sort-comp": 0,
     "one-var": 0,
