--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "body-scroll-lock": "^2.6.1",
     "cloudinary-react": "^1.0.6",
     "copy-to-clipboard": "^3.0.8",
     "create-index": "^2.3.0",
