--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "query-string": "^6.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.5.7",
     "react-lazyload": "^2.3.0",
     "react-progressive-image": "^0.6.0",
     "react-responsive": "^4.1.0",
