--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "2.0.3",
     "react-toastify": "^4.4.3",
     "soundcloud-audio": "^1.4.0",
+    "styled-components": "^4.1.3",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
