more responsive changes

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.9.4",
     "query-string": "^6.2.0",
     "react": "^16.2.0",
+    "react-burger-menu": "^2.6.5",
     "react-dom": "^16.2.0",
     "react-ga": "^2.5.7",
     "react-lazyload": "^2.3.0",
