--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     'jsx-a11y/label-has-for': 0,
     'prefer-destructuring': 0,
     'no-lonely-if': 0,
+    "import/newline-after-import": 0,
     "no-else-return": 0,
     "no-eval": 0,
     "class-methods-use-this": 0,
