--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     'jsx-a11y/label-has-for': 0,
     'prefer-destructuring': 0,
     'no-lonely-if': 0,
+    'react/jsx-no-target-blank': 0,
     "import/newline-after-import": 0,
     "no-else-return": 0,
     "no-eval": 0,
