--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "copy-to-clipboard": "^3.0.8",
     "create-index": "^2.3.0",
     "dayjs": "^1.8.15",
+    "firebase": "^7.8.1",
     "global": "^4.3.2",
     "node-sass": "^4.9.4",
     "query-string": "^6.2.0",
