--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@sentry/browser": "^4.5.3",
     "axios": "^0.17.1",
     "copy-to-clipboard": "^3.0.8",
+    "country-emoji": "^1.5.0",
     "create-index": "^2.3.0",
     "dayjs": "^1.8.15",
     "global": "^4.3.2",
