--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "eslint-config-airbnb": "^16.1.0"
   },
   "browserslist": [
