--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@iconify/icons-entypo-social": "^1.0.5",
+    "@iconify/react": "^1.1.3",
     "babel-plugin-styled-components": "^1.10.7",
     "eslint-config-airbnb": "^16.1.0"
   },
