--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.50",
     "@iconify/icons-entypo-social": "^1.0.5",
     "@iconify/react": "^1.1.3",
     "@sentry/browser": "^4.5.3",
@@ -12,6 +13,7 @@
     "create-index": "^2.3.0",
     "dayjs": "^1.8.15",
     "global": "^4.3.2",
+    "graphql": "^15.0.0",
     "node-sass": "^4.9.4",
     "query-string": "^6.2.0",
     "react": "^16.2.0",
