--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bc-web-client",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.50",
+    "@apollo/react-components": "^3.1.5",
     "@iconify/icons-entypo-social": "^1.0.5",
     "@iconify/react": "^1.1.3",
     "@sentry/browser": "^4.5.3",
