--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.0.0-beta.50",
     "@apollo/react-components": "^3.1.5",
     "@iconify/icons-entypo-social": "^1.0.5",
+    "@iconify/icons-mdi": "^1.0.109",
     "@iconify/react": "^1.1.3",
     "@sentry/browser": "^4.5.3",
     "axios": "^0.17.1",
